--- a/index.html
+++ b/index.html
@@ -14,18 +14,7 @@
   <link rel="preload" href="fonts/MontserratExtraBold.woff2" as="font" crossorigin>
 
   <!-- CSS -->
-  <!-- <link rel="shortcut icon" href="img/favicon.png">
-  <link rel="preload" href="css/normalize.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <link rel="preload" href="css/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <link rel="preload" href="css/media.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> -->
-  <!-- for browsers without JavaScript enabled -->
-  <!-- <noscript>
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="css/media.min.css">
-  </noscript> -->
-
-
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png">
   <link rel="preload" as="style" href="css/normalize.min.css" onload="this.rel='stylesheet'">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="preload" as="style" href="css/media.min.css" onload="this.rel='stylesheet'">
