--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="preload" href="fonts/MontserratExtraBold.woff2" as="font" crossorigin>
 
   <!-- CSS -->
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+  <link rel="icon" href="{{ site.baseurl }}/favicon.png" type="image/png" />
   <link rel="preload" as="style" href="css/normalize.min.css" onload="this.rel='stylesheet'">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="preload" as="style" href="css/media.min.css" onload="this.rel='stylesheet'">
